force-app/main/default/objects/Course_Offering__c/Course_Offering__c.object-meta.xml
<CustomObject>
    <label>Course Offering</label>
    <nameField>
        <label>Course Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>