force-app/main/default/objects/Course_Offering__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campus</label>
    <referenceTo>Campus__c</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>